--- a/css/css.css
+++ b/css/css.css
@@ -1,42 +1,103 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+:root {
+    --bg-img:url(../img/img1.jpg);
+    --text-color: #fff;;
+    
+  }
 /* إعدادات الصفحة */
 body {
-  margin: 0;
-  overflow: hidden;
-  background: linear-gradient(to bottom, #0b3d91, #1c1c3c); /* لون السماء */
-  height: 100vh;
-  background-image: url(/img/img1.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+    min-height: 100vh;
+    background-image: var(--bg-img);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    text-align: center;
+    transition: background 0.4s;
+}
+.date{
+    color: var(--text-color);
+}
+.dark-mode {
+    --bg-img:  url(../img/img2.jpg);
+    --text-color: #000;
+  }
+
+  
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 25px;
 }
 
 
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc; 
+  transition: .4s;
+  border-radius: 25px;
+}
+
+
+.slider:before {
+  content: "";
+  position: absolute;
+  height: 17px;
+  width: 17px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+
+input:checked + .slider {
+  background-color: #28dec0; 
+}
+
+
+input:checked + .slider:before {
+  transform: translateX(25px);
+}
+
+.container {
+    max-width: 400px;
+    margin: auto;
+    padding: 20px;
+}
 
 button:hover {
-    background-color: #ffeb3bf6;
+    background-color: #ff9800;
+    color: white;
 }
 
-li{
+li {
     margin-top: 20px;
     display: flex;
     justify-content: space-between;
 }
-.exst:hover {
-    padding: 10px;
-    /* color: #f1e9e9; */
-    /* border: 1px solid; */
-    font-size: 20px;
-    border-radius: 50%;
-    /* height: 10px; */
-    font-weight: 900;
-    background-color: #f31d0d8f;
+
+/* تحسين ترتيب العناصر */
+.check {
+    z-index: 10;
 }
 
-  
-  
-  
+
